<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <import type="android.view.View" />

        <variable
            name="weatherDataViewModel"
            type="com.example.rohan.androidweatherapp.viemodels.WeatherDataViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v4.widget.DrawerLayout
            android:id="@+id/drawer_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:openDrawer="start">
            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

                <android.support.design.widget.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/AppTheme.AppBarOverlay">

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="?attr/colorPrimary"
                        app:popupTheme="@style/AppTheme.PopupOverlay" />

                </android.support.design.widget.AppBarLayout>

            <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <!--android:visibility="@{weatherDataViewModel.showError?View.GONE:View.VISIBLE}">-->



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Weather"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:paddingTop="@dimen/layout_margin_bottom"
            android:paddingLeft="@dimen/layout_margin_top"
            android:textSize="@dimen/text_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/weather_status"
                    android:text="@{weatherDataViewModel.description}"
                    android:paddingLeft="@dimen/layout_margin_top"
                    android:paddingTop="@dimen/layout_margin_top"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size"
                    android:capitalize="words"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="@dimen/description_text_width"
                    android:layout_height="wrap_content"
                    android:id="@+id/description"
                    android:text="@{weatherDataViewModel.maxTemp}"
                    android:paddingLeft="@dimen/layout_margin_top"
                    android:paddingTop="@dimen/layout_margin_top"
                    android:paddingBottom="@dimen/layout_margin_bottom"
                    android:textSize="@dimen/text_size"
                    />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/temperature"
                android:paddingTop="@dimen/layout_margin_top"
                android:layout_marginStart="@dimen/temp_margin_start"
                android:layout_marginRight="@dimen/layout_margin_top"
                android:text="@{weatherDataViewModel.temperature}"
                android:textStyle="bold"
                android:textSize="@dimen/temp_text_size"
                android:textColor="@color/black"/>

        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/view_height"
            android:background="@color/view_background"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:layout_marginBottom="@dimen/layout_margin_bottom"
            android:weightSum="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wind_speed_text"
                android:paddingLeft="@dimen/layout_margin_top"
                android:paddingTop="@dimen/layout_margin_top"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/layout_margin_top"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:id="@+id/wind_speed"
                android:text="@{weatherDataViewModel.windSpeed}"
                android:paddingTop="@dimen/layout_margin_top"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/view_height"
            android:background="@color/view_background"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:layout_marginBottom="@dimen/layout_margin_bottom"
            android:weightSum="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cloudiness_text"
                android:textStyle="bold"
                android:paddingLeft="@dimen/layout_margin_top"
                android:paddingTop="@dimen/layout_margin_top"
                android:textSize="@dimen/text_size"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cloudness"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:text="@{weatherDataViewModel.cloudiness}"
                android:layout_marginRight="@dimen/layout_margin_top"
                android:paddingTop="@dimen/layout_margin_top"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/view_height"
            android:background="@color/view_background"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:layout_marginBottom="@dimen/layout_margin_bottom"
            android:weightSum="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pressure_text"
                android:paddingLeft="@dimen/layout_margin_top"
                android:paddingTop="@dimen/layout_margin_top"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:id="@+id/pressure"
                android:text="@{weatherDataViewModel.pressure}"
                android:layout_marginRight="@dimen/layout_margin_top"
                android:paddingTop="@dimen/layout_margin_top"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/view_height"
            android:background="@color/view_background"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:layout_marginBottom="@dimen/layout_margin_bottom"
            android:weightSum="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/humidity_text"
                android:paddingLeft="@dimen/layout_margin_top"
                android:paddingTop="@dimen/layout_margin_top"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:id="@+id/humidity"
                android:text="@{weatherDataViewModel.humidity}"
                android:layout_marginRight="@dimen/layout_margin_top"
                android:paddingTop="@dimen/layout_margin_top"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/view_height"
            android:background="@color/view_background"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:layout_marginBottom="@dimen/layout_margin_bottom"
            android:weightSum="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sunrise"
                android:paddingLeft="@dimen/layout_margin_top"
                android:paddingTop="@dimen/layout_margin_top"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/layout_margin_top"
                android:textAlignment="viewEnd"
                android:text="@string/sunset"
                android:paddingTop="@dimen/layout_margin_top"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/measured_at"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/text_margin_top"
            android:layout_marginLeft="@dimen/layout_margin_top"
            android:textAlignment="viewStart"
            android:textSize="@dimen/text_size"
            android:text="@{weatherDataViewModel.location}"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/error_message"
        android:visibility="gone">
        <!--android:visibility="@{weatherDataViewModel.showError() ? View.VISIBLE : View.GONE, default=gone">-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textAlignment="center"
            android:text="@string/error_message"
            android:textSize="@dimen/error_text_size"
            android:textStyle="bold"/>
    </LinearLayout>
            </android.support.constraint.ConstraintLayout>
            </android.support.design.widget.CoordinatorLayout>
        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/nav_header_main"/>
        </android.support.v4.widget.DrawerLayout>
    </LinearLayout>
</layout>